<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>patchworkpp</name>
  <version>0.0.0</version>
  <description>patchwork++ package</description>

  <maintainer email="sj98lee@kaist.ac.kr">Seungjae Lee</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ros_environment</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <depend>libpcl-common</depend>
  <depend>libpcl-filters</depend>
  <depend>libpcl-io</depend>
  <depend>libpcl-kdtree</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>  
  <depend>cv_bridge</depend>
  <depend>laser_geometry</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_components</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
